# mkdocstrings

./: .copier-answers.yml  .coverage.corsair.2191500.610956  .cruft.json  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .gitpod.dockerfile  .gitpod.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  FAQ.md  LICENSE  Makefile  README.md  coverage.ini  custom.css  devdeps.txt  duties.py  gen_credits.py  gen_redirects.py  gen_ref_nav.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.insiders.yml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  readthedocs.yml  schema.json  sitemap.xml  tasks.py  zensical.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md  bug_report.md  config.yml  question.md
.github/workflows/: ci.yml  dists.yml  release.yml  sponsors.yml
assets/: _markdown_exec_pyodide.js  _mkdocstrings.css
changelog/: index.html
code_of_conduct/: index.html
config/: black.toml  coverage.ini  flake8.ini  git-changelog.toml  mypy.ini  pytest.ini  pytest_39.ini  ruff.toml  ty.toml
config/vscode/: launch.json  settings.json  tasks.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_002c493ad4b8202f___init___py.html  d_002c493ad4b8202f_builtin_py.html  d_002c493ad4b8202f_cross_reference_py.html  d_002c493ad4b8202f_footnotes_py.html  d_002c493ad4b8202f_headings_py.html  d_002c493ad4b8202f_html_tokens_py.html  d_002c493ad4b8202f_string_annotation_py.html  d_7c5e48b88f50e873__cache_py.html  d_7c5e48b88f50e873_debug_py.html  d_7c5e48b88f50e873_extension_py.html  d_7c5e48b88f50e873_inventory_py.html  d_7c5e48b88f50e873_loggers_py.html  d_7c5e48b88f50e873_plugin_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_extension_py.html  d_a44f0ac069e85531_test_handlers_py.html  d_a44f0ac069e85531_test_inventory_py.html  d_a44f0ac069e85531_test_plugin_py.html  d_a44f0ac069e85531_test_python_handler_py.html  d_a44f0ac069e85531_test_themes_py.html  d_fca87304f13ef3fa___init___py.html  d_fca87304f13ef3fa_base_py.html  d_fca87304f13ef3fa_python_py.html  d_fca87304f13ef3fa_rendering_py.html  function_index.html  index.html  src_mkdocstrings_extension_py.html  src_mkdocstrings_handlers_base_py.html  src_mkdocstrings_handlers_python_py.html  src_mkdocstrings_handlers_rendering_py.html  src_mkdocstrings_inventory_py.html  src_mkdocstrings_loggers_py.html  src_mkdocstrings_plugin_py.html  status.json  tests_conftest_py.html  tests_test_extension_py.html  tests_test_handlers_py.html  tests_test_inventory_py.html  (+17 more)
credits/: index.html
css/: insiders.css  mkdocstrings.css  style.css
docs/: SUMMARY.md  changelog.md  code_of_conduct.md  conf.py  credits.md  custom.css  extra.css  faq.md  gen_credits.py  gen_doc_stubs.py  gen_ref_nav.py  index.md  license.md  macros.py  recipes.md  reference.md  requirements.txt  schema.json  sidebar.md  theming.md  troubleshooting.md  usage.md
docs/.overrides/: main.html
docs/.overrides/partials/: comments.html  path-item.html
docs/css/: apidocs.css  material.css  mkdocstrings.css  style.css
docs/handlers/: overview.md  python.md
docs/insiders/: changelog.md  index.md  installation.md
docs/js/: feedback.js  insiders.js
docs/reference/: docstrings.md  documenter.md  extension.md  mkdocstrings.md  plugin.md  references.md  renderer.md  utils.md
docs/reference/autorefs/: plugin.md  references.md
docs/reference/handlers/: __init__.md  base.md  python.md  rendering.md
docs/snippets/: function_annotations_google.py  function_annotations_rst.py
docs/usage/: handlers.md  index.md  theming.md
handlers/overview/: index.html
handlers/python/: index.html
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
js/: insiders.js
license/: index.html
recipes/: index.html  index.md
reference/: SUMMARY.txt  index.html
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/autorefs/plugin/: index.html
reference/autorefs/references/: index.html
reference/debug/: index.html
reference/docstrings/: index.html
reference/documenter/: index.html
reference/extension/: index.html
reference/handlers/: index.html
reference/handlers/__init__/: index.html
reference/handlers/base/: index.html
reference/handlers/python/: index.html
reference/handlers/rendering/: index.html
reference/inventory/: index.html
reference/loggers/: index.html
reference/mkdocstrings/: index.html
reference/plugin/: index.html
reference/references/: index.html
reference/renderer/: index.html
scripts/: gen-credits-data.py  gen-readme-data.py  gen_api_ref.py  gen_credits.py  gen_credits_data.py  gen_ref_nav.py  get_version.py  insiders.py  make  make.py  multirun.sh  regen_docs.py  run_task.sh  setup.sh  update_changelog.py
scripts/templates/: CREDITS.md  README.md  coverage.css
scripts/templates/vlz/: Jinja2.txt  commonmark.txt
search/: search_index.json
snippets/: function_annotations_google.py
src/mkdocs_autorefs/: plugin.py  references.py
src/mkdocstrings/: __init__.py  __main__.py  _cache.py  _download.py  cli.py  debug.py  docstrings.py  documenter.py  extension.py  inventory.py  loggers.py  logging.py  plugin.py  references.py  renderer.py  utils.py
src/mkdocstrings/_internal/: debug.py  download.py  extension.py  inventory.py  loggers.py  plugin.py
tests/: __init__.py  conftest.py  test_api.py  test_autodoc.py  test_cache.py  test_cli.py  test_documenter.py  test_download.py  test_extension.py  test_handlers.py  test_inventory.py  test_loggers.py  test_plugin.py  test_python_handler.py  test_references.py  test_themes.py
tests/fixtures/: __init__.py  builtin.py  cross_reference.py  footnotes.py  headings.py  headings_many.py  html_escaped_sequences.py  html_tokens.py  markdown_anchors.py  nesting.py  string_annotation.py
theming/: index.html
troubleshooting/: index.html  index.md
usage/: index.html  index.md
usage/handlers/: index.html  index.md
usage/theming/: index.html  index.md
(+39 files in other folders)
